SCRUM-181 Replace this usage of 'Stream.collect(Collectors.toList())' with 'Stream.toList()'